# wif

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  pytest.ini
tests/: conftest.py  test_Cij.py  test_cli_fit.py  test_cli_md.py  test_cli_wif.py  test_cli_wif_multiconfig.py  test_cli_wif_wfl.py  test_interrupted_rerun.py  test_read_inputs.py
tests/assets/: vasp.fake
tests/assets/test_Cij/: lammps.in
tests/assets/test_cli_fit/: isolated_atom.Ni.extxyz  md_step_00.step_020.fitting.extxyz  md_step_00.step_020.validation.extxyz  md_step_20.step_020.fitting.extxyz  md_step_20.step_020.validation.extxyz  wif.toml
tests/assets/test_cli_md/: INCAR  POSCAR  wif.toml
tests/assets/test_cli_wif/: INCAR  POTCAR  prev_configs.xyz  wif.toml.template  wif_manual.toml.template
tests/assets/test_cli_wif_multiconfig/: INCAR  KPOINTS  multiconfig.wif.toml.template  multiconfig_toml_sections.wif.toml.template  single_config.wif.toml.template  struct_2.POSCAR
tests/assets/test_cli_wif_multiconfig/prev_run/: isolated_atom.test.extxyz
tests/assets/test_cli_wif_wfl/: INCAR  POTCAR  struct_1.POSCAR  wif.toml.template  wif_wfl.toml
tests/assets/test_read_inputs/: INCAR  POTCAR.bad  POTCAR.good
tests/not_pytest/: explore_barostat_heuristic.py
wif/: iterative_md_fit.py  logging.py  standalone_fit.py  term_symbols.py  utils.py  wif_defaults.toml  wif_wfl_defaults.toml
wif/cli/: fit.py  md.py  utils.py  wif.py
wif/dft/: vasp.py
wif/potentials/: mace.py
